# TSP_Optimization

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  hard_fix_2.txt  hard_fix_70.txt  hard_fix_90.txt  perfProf.py  runBackend.sh  soft_fix.txt
data/: geo48.tsp  gr17.tsp  mockup5.tsp  mockup6.tsp  test6.tsp
data/art/: art_0.tsp  gon_8k.tsp  hisoka.tsp  hisoka_16k.tsp  killua.tsp  killua_16k.tsp  stefano_128k.tsp  stefano_16k.tsp  stefano_2k.tsp  stefano_4k.tsp  stefano_64k.tsp  stefano_8k.tsp
data/compact_models/size_30/: random_0.tsp  random_1.tsp  random_10.tsp  random_11.tsp  random_12.tsp  random_13.tsp  random_14.tsp  random_15.tsp  random_16.tsp  random_17.tsp  random_18.tsp  random_19.tsp  random_2.tsp  random_3.tsp  random_4.tsp  random_5.tsp  random_6.tsp  random_7.tsp  random_8.tsp  random_9.tsp
data/compact_models/size_40/: random_0.tsp  random_1.tsp  random_10.tsp  random_11.tsp  random_12.tsp  random_13.tsp  random_14.tsp  random_15.tsp  random_16.tsp  random_17.tsp  random_18.tsp  random_19.tsp  random_2.tsp  random_3.tsp  random_4.tsp  random_5.tsp  random_6.tsp  random_7.tsp  random_8.tsp  random_9.tsp
data/compact_models/size_5/: random_0.tsp  random_1.tsp  random_2.tsp  random_3.tsp  random_4.tsp
data/compact_models/size_50/: random_0.tsp  random_1.tsp  random_10.tsp  random_11.tsp  random_12.tsp  random_13.tsp  random_14.tsp  random_15.tsp  random_16.tsp  random_17.tsp  random_18.tsp  random_19.tsp  random_2.tsp  random_3.tsp  random_4.tsp  random_5.tsp  random_6.tsp  random_7.tsp  random_8.tsp  random_9.tsp
data/compact_models/size_60/: random_0.tsp  random_1.tsp  random_10.tsp  random_11.tsp  random_12.tsp  random_13.tsp  random_14.tsp  random_15.tsp  random_16.tsp  random_17.tsp  random_18.tsp  random_19.tsp  random_2.tsp  random_3.tsp  random_4.tsp  random_5.tsp  random_6.tsp  random_7.tsp  random_8.tsp  random_9.tsp
include/: benders.h  callback.h  convexhull.h  distutil.h  genetic.h  gg.h  hardfixing.h  heuristics.h  mtz.h  plot.h  softfixing.h  solver.h  tabusearch.h  utility.h  vns.h
measures/: TimeMeasure.xlsx  compact20.csv  compact40.csv  compact60.csv  compact_30.csv  exact.csv  exact_methods.csv  matheuristics.csv
model/: a280.lp  att48.lp  berlin52.lp  burma14.lp  mockup5.lp  mockup6.lp  pr76.lp  ulysses16.lp  ulysses22.lp
other_codes/: META_comparison.py  automatic_test.py  constructive_comparison.py  exact_methods_comparison.py  generate_tsp_istances.py  genetic_comparison.py  genetic_grasp_comparison.py  nohup.out  perfProf.py  plot_tour.py  read_tsp.py  sort_edges.py  telegram_bot.py  tsp.py
other_codes/.ipynb_checkpoints/: Plot Hard Fixing iterations-checkpoint.ipynb
other_codes/hard_fixing_iterations/: 70_percent.txt  90_percent.txt
other_codes/mathHeuristics/: hard_fix2.txt  hard_fix_2.txt  hard_fix_70.txt  hard_fix_90.txt  plot_cost_time.py  soft_fix.txt  terminaloutput.txt
other_codes/metaHeuristics/: genetic.txt  genetic_new.txt  plot_cost_time.py  tabu_lin.txt  tabu_rand.txt  tabu_step.txt  vns.txt  vns120s.txt  vns1swap.txt  vns2swap.txt  vns3.txt  vns5swap.txt  vns5swapRestore.txt  vns_greedy_2opt_restore_3edges.txt  vns_greedy_restore_3edges.txt
results/: compact.csv  compact30.csv  compact50.csv  compact_similar_times.csv  constructive_heuristics.csv  constructive_heuristics2.csv  constructive_heuristics_2opt.csv  constructive_heuristics_2opt_new.csv  constructive_heuristics_2opt_new_with_optimal.csv  constructive_heuristics_correct.csv  constructive_heuristics_new.csv  constructive_heuristics_new_with_optimal.csv  constructive_notime.csv  exact.csv  exact_methods.csv  exact_methods_new.csv  exact_similar_times.csv  genetic_2opt.csv  genetic_comparison.csv  grasp_genetic.csv  matheuristics.csv  meta_heuristics.csv  meta_heuristics_opt.csv  performance.csv  pure_genetic.csv
src/: benders.c  callback.c  convexhull.c  distutil.c  genetic.c  gg.c  hardfixing.c  heuristics.c  main.c  mtz.c  plot.c  softfixing.c  solver.c  tabusearch.c  utility.c  vns.c
test/: CMakeLists.txt  tsp_test.c
test/data/: fail_att48.tsp  shuffled_prop_att48.tsp
webapp/backend/testAPI/: app.py  backend.py  hello.py  plot_tsp.py  testProcess.py
webapp/backend/testAPI/user_runs/: 1628610853.txt  1628611000.txt
webapp/backend/tour/: a280.tour  ali535.tour  att48.tour  berlin52.tour  burma14.tour  ch130.tour  ulysses16.tsp.tour
webapp/frontend/: index.html  script.js
